<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <!-- Profile -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/bt_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:drawablePadding="10dp"
            android:text="@string/mainA_tv_username"
            android:textSize="20sp"
            app:drawableLeftCompat="@mipmap/icon_song" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            tools:text="Timer" />

        <ImageButton
            android:id="@+id/bt_relocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/temp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/mainA_song_list_title"
        android:textAlignment="center"
        android:textSize="16sp" />

    <!-- Music List : Recycler View -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_musics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="9" />

    <!-- Music Info -->
    <TextView
        android:id="@+id/tv_song_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />

    <!-- Progress Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_time_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="11sp"
            tools:text="00:00 / 00:00" />

        <SeekBar
            android:id="@+id/sb_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

    </LinearLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_mode_changer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/missingStr"
            android:src="@mipmap/icon_song"
            android:text="@string/mainA_bt_next" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <ImageButton
                android:id="@+id/bt_control"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/missingStr"
                android:src="@mipmap/icon_play"
                android:text="@string/mainA_bt_play" />

            <ImageButton
                android:id="@+id/bt_last"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/bt_control"
                android:contentDescription="@string/missingStr"
                android:src="@mipmap/icon_last"
                android:text="@string/mainA_bt_last" />

            <ImageButton
                android:id="@+id/bt_next"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/bt_control"
                android:contentDescription="@string/missingStr"
                android:src="@mipmap/icon_next"
                android:text="@string/mainA_bt_next" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/bt_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/missingStr"
            android:src="@mipmap/icon_more"
            android:text="@string/mainA_bt_next" />

    </LinearLayout>


</LinearLayout>
